--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: universal_sql_database
 description: A new Flutter package project.
-version: 0.0.1
+version: 0.0.1+1
 homepage:
 
 environment:
